# mcpeeps

./: .gitignore  AGENTS.md  README.md  main.py  pyproject.toml
agents/game-tester/: Makefile  main.py  pyproject.toml
agents/product-manager/: Makefile  main.py  pyproject.toml
agents/swe-agent/: .env.example  Makefile  main.py  pyproject.toml
coordinator/: Makefile  main.py  pyproject.toml
coordinator/src/coordinator_app/: __init__.py  agent_comm.py  app.py  registry.py  ui.py  workers.py
game-server/: README.md  index.html  run_server.py
ui-nuxt/: .gitignore  Makefile  nuxt.config.ts  package.json  pnpm-lock.yaml
ui-nuxt/layouts/: default.vue
ui-nuxt/pages/: game.vue  index.vue
